--- a/Project/Engine/Engine.vcxproj
+++ b/Project/Engine/Engine.vcxproj
@@ -130,7 +130,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PreBuildEvent>
-      <Command>cd $(SolutionDir)
+      <Command>cd $(SolutionDir)Project\ETC\
 call EngineCopy.bat</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
@@ -153,7 +153,7 @@ call EngineCopy.bat</Command>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PreBuildEvent>
-      <Command>cd $(SolutionDir)
+      <Command>cd $(SolutionDir)Project\ETC\
 call EngineCopy.bat</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
