--- a/Project/Client/Client.vcxproj
+++ b/Project/Client/Client.vcxproj
@@ -142,6 +142,7 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="value_client.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Client.cpp" />
