--- a/Project/Client/Client.vcxproj.filters
+++ b/Project/Client/Client.vcxproj.filters
@@ -1,40 +1,42 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="소스 파일">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="헤더 파일">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
     <Filter Include="리소스 파일">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="01.Header">
+      <UniqueIdentifier>{fb76101c-f330-457a-a507-e532e5bf0539}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="00.Default">
+      <UniqueIdentifier>{e7c208a2-9a74-4af8-a3f7-398b173a0797}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="00.Default\main">
+      <UniqueIdentifier>{d07fad99-5c37-4b1e-a933-ed13e6ea8410}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="01.Header\pch">
+      <UniqueIdentifier>{f379472f-a02c-49f3-9c0f-46eea6ff7d34}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="targetver.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>00.Default</Filter>
     </ClInclude>
     <ClInclude Include="Resource.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>00.Default</Filter>
     </ClInclude>
-    <ClInclude Include="Client.h">
-      <Filter>헤더 파일</Filter>
+    <ClInclude Include="targetver.h">
+      <Filter>00.Default</Filter>
     </ClInclude>
     <ClInclude Include="value_client.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>00.Default</Filter>
     </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Client.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
+    <ClInclude Include="Client.h">
+      <Filter>00.Default\main</Filter>
+    </ClInclude>
+    <ClInclude Include="pch_client.h">
+      <Filter>01.Header\pch</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Client.rc">
@@ -48,5 +50,13 @@
     <Image Include="Client.ico">
       <Filter>리소스 파일</Filter>
     </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Client.cpp">
+      <Filter>00.Default\main</Filter>
+    </ClCompile>
+    <ClCompile Include="pch_client.cpp">
+      <Filter>01.Header\pch</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
