--- a/Project/Client/Client.vcxproj.filters
+++ b/Project/Client/Client.vcxproj.filters
@@ -17,6 +17,12 @@
     <Filter Include="01.Header\pch">
       <UniqueIdentifier>{f379472f-a02c-49f3-9c0f-46eea6ff7d34}</UniqueIdentifier>
     </Filter>
+    <Filter Include="02.ImGui">
+      <UniqueIdentifier>{90e055b6-58b2-4850-a86e-64cf7cc8ad43}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02.ImGui\backends">
+      <UniqueIdentifier>{f90e3cb6-a651-4be2-881f-8cc51506156f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -36,6 +42,30 @@
     </ClInclude>
     <ClInclude Include="pch_client.h">
       <Filter>01.Header\pch</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imconfig.h">
+      <Filter>02.ImGui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui.h">
+      <Filter>02.ImGui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui_internal.h">
+      <Filter>02.ImGui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_rectpack.h">
+      <Filter>02.ImGui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_textedit.h">
+      <Filter>02.ImGui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_truetype.h">
+      <Filter>02.ImGui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui_impl_dx11.h">
+      <Filter>02.ImGui\backends</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui_impl_win32.h">
+      <Filter>02.ImGui\backends</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -57,6 +87,27 @@
     </ClCompile>
     <ClCompile Include="pch_client.cpp">
       <Filter>01.Header\pch</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui.cpp">
+      <Filter>02.ImGui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_demo.cpp">
+      <Filter>02.ImGui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_draw.cpp">
+      <Filter>02.ImGui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_tables.cpp">
+      <Filter>02.ImGui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_widgets.cpp">
+      <Filter>02.ImGui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_impl_dx11.cpp">
+      <Filter>02.ImGui\backends</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_impl_win32.cpp">
+      <Filter>02.ImGui\backends</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
