.gitignore 수정 (DirectXTex.lib, DirectXTex_d.lib)

--- a/.gitignore
+++ b/.gitignore
@@ -414,4 +414,8 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# Custom
+DirectXTex/DirectXTex.lib
+DirectXTex/DirectXTex_d.lib
+
 # End of https://www.toptal.com/developers/gitignore/api/windows,c++,vs
