--- a/.gitignore
+++ b/.gitignore
@@ -415,7 +415,7 @@ $RECYCLE.BIN/
 *.lnk
 
 # Custom
-DirectXTex/DirectXTex.lib
-DirectXTex/DirectXTex_d.lib
+!DirectXTex/DirectXTex.lib
+!DirectXTex/DirectXTex_d.lib
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,c++,vs
